2008-06-16  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_thread):
	Don't get the own details twice

2008-06-16  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_gnokii_func),
	(phonemgr_listener_connect): More error output when we
	get disconnected because the device has gone away,
	get the own details earlier, so that they're available when
	we're actually connected

2008-06-16  Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>

	* Makefile.am,
	configure.in,
	cut-n-paste/Makefile.am,
	cut-n-paste/update-from-egg.sh,
	cut-n-paste/e-contact-entry/e-contact-entry.c,
	cut-n-paste/e-contact-entry/e-contact-entry.h,
	cut-n-paste/e-contact-entry/econtactentry-marshal.list,
	cut-n-paste/e-contact-entry/Makefile.am,
	cut-n-paste/gconf-bridge/gconf-bridge.c,
	cut-n-paste/gconf-bridge/gconf-bridge.h,
	cut-n-paste/gconf-bridge/Makefile.am,
	src/e-contact-entry.c,
	src/e-contact-entry.h,
	src/econtactentry-marshal.list,
	src/gconf-bridge.c,
	src/gconf-bridge.h,
	src/Makefile.am: move cut'n pasted code to cut-n-paste/ to prepare
	gnome-bluetooth dependency removal (step 1 of #455838)

2008-06-16  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Use pkgdatadir, as src/Makefile.am does,
	to install the glade file

2008-06-13  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_get_own_details),
	(phonemgr_listener_disconnect_cleanup): Save the IMEI of the
	phone on connect

============ Version 0.60

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.60

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_gnokii_func),
	(phonemgr_listener_connect), (phonemgr_listener_cell_not_cb),
	(phonemgr_listener_sms_notification_soft_poll),
	(phonemgr_listener_battery_poll),
	(phonemgr_listener_get_own_details),
	(phonemgr_listener_set_sms_notification),