@@ -1,5 +1,11 @@
 2008-06-16  Bastien Nocera  <hadess@hadess.net>
 
+	* libgsm/phonemgr-utils.c (phonemgr_utils_gn_error_to_string):
+	Fix call to phonemgr_utils_gn_error_to_string() failing
+	when perr is NULL
+
+2008-06-16  Bastien Nocera  <hadess@hadess.net>
+
 	* libgsm/phonemgr-listener.c (phonemgr_listener_thread):
 	Don't get the own details twice
 
